--- a/tapper-extreme/Base.lproj/Main.storyboard
+++ b/tapper-extreme/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="tapper_extreme" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +16,58 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="retrobg" translatesAutoresizingMaskIntoConstraints="NO" id="TYT-Sn-aGw">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Tapper" translatesAutoresizingMaskIntoConstraints="NO" id="awh-Tu-Yzi">
+                                <rect key="frame" x="116" y="101" width="368" height="79"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="368" id="euu-CL-Oy4"/>
+                                    <constraint firstAttribute="height" constant="79" id="y5x-2o-ch4"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="How many taps to win?" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5E7-t7-F5d">
+                                <rect key="frame" x="176" y="371" width="249" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="249" id="2NI-OT-Nd8"/>
+                                    <constraint firstAttribute="height" constant="45" id="4TM-lR-hNw"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fvs-Z6-NSx">
+                                <rect key="frame" x="176" y="421" width="249" height="120"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="120" id="x8o-Bv-NAs"/>
+                                    <constraint firstAttribute="width" constant="249" id="xfu-f4-YvF"/>
+                                </constraints>
+                                <state key="normal" image="playbtn"/>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="awh-Tu-Yzi" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8tB-N9-uEk"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Fvs-Z6-NSx" secondAttribute="bottom" constant="65" id="Cld-ID-yx5"/>
+                            <constraint firstItem="awh-Tu-Yzi" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="87" id="SEV-0t-QpX"/>
+                            <constraint firstItem="TYT-Sn-aGw" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Wy9-qS-ZSQ"/>
+                            <constraint firstItem="Fvs-Z6-NSx" firstAttribute="top" secondItem="5E7-t7-F5d" secondAttribute="bottom" constant="20" id="dOU-FJ-9wW"/>
+                            <constraint firstItem="Fvs-Z6-NSx" firstAttribute="centerX" secondItem="5E7-t7-F5d" secondAttribute="centerX" id="dnd-fx-kEP"/>
+                            <constraint firstAttribute="trailing" secondItem="TYT-Sn-aGw" secondAttribute="trailing" id="hlg-hV-1LF"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="TYT-Sn-aGw" secondAttribute="bottom" id="pMn-nA-5gO"/>
+                            <constraint firstItem="Fvs-Z6-NSx" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="q5B-ZX-uOp"/>
+                            <constraint firstItem="TYT-Sn-aGw" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="tFl-Y9-vJt"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="305" y="387"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Tapper" width="497" height="107"/>
+        <image name="playbtn" width="356" height="175"/>
+        <image name="retrobg" width="800" height="800"/>
+    </resources>
 </document>
