--- a/tapper-extreme/Base.lproj/Main.storyboard
+++ b/tapper-extreme/Base.lproj/Main.storyboard
@@ -17,17 +17,22 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="retrobg" translatesAutoresizingMaskIntoConstraints="NO" id="TYT-Sn-aGw">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Tapper" translatesAutoresizingMaskIntoConstraints="NO" id="awh-Tu-Yzi">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Tapper" translatesAutoresizingMaskIntoConstraints="NO" id="awh-Tu-Yzi" userLabel="Logo">
                                 <rect key="frame" x="116" y="101" width="368" height="79"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="368" id="euu-CL-Oy4"/>
                                     <constraint firstAttribute="height" constant="79" id="y5x-2o-ch4"/>
                                 </constraints>
                             </imageView>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="How many taps to win?" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5E7-t7-F5d">
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fvs-Z6-NSx" userLabel="PlayBtn">
+                                <rect key="frame" x="176" y="421" width="249" height="120"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="120" id="x8o-Bv-NAs"/>
+                                    <constraint firstAttribute="width" constant="249" id="xfu-f4-YvF"/>
+                                </constraints>
+                                <state key="normal" image="playbtn"/>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="How many taps to win?" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5E7-t7-F5d" userLabel="TapTxt">
                                 <rect key="frame" x="176" y="371" width="249" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="249" id="2NI-OT-Nd8"/>
@@ -36,14 +41,27 @@
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fvs-Z6-NSx">
-                                <rect key="frame" x="176" y="421" width="249" height="120"/>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6mC-Ep-IxB" userLabel="CoinBtn">
+                                <rect key="frame" x="220" y="58" width="160" height="165"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="120" id="x8o-Bv-NAs"/>
-                                    <constraint firstAttribute="width" constant="249" id="xfu-f4-YvF"/>
+                                    <constraint firstAttribute="height" constant="165" id="5wi-UB-5O2"/>
+                                    <constraint firstAttribute="width" constant="160" id="rnA-Gl-KDe"/>
                                 </constraints>
-                                <state key="normal" image="playbtn"/>
+                                <state key="normal" image="coin"/>
                             </button>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1000 taps" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hxF-6Q-HB1" userLabel="TapLbl">
+                                <rect key="frame" x="156" y="251" width="289" height="76"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="76" id="fXL-tk-guM"/>
+                                    <constraint firstAttribute="width" constant="289" id="t3m-Cg-oPB"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="60"/>
+                                <color key="textColor" red="0.99897742146596857" green="0.99897742146596857" blue="0.99897742146596857" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="highlightedColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="retrobg" translatesAutoresizingMaskIntoConstraints="NO" id="TYT-Sn-aGw">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
@@ -51,12 +69,16 @@
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Fvs-Z6-NSx" secondAttribute="bottom" constant="65" id="Cld-ID-yx5"/>
                             <constraint firstItem="awh-Tu-Yzi" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="87" id="SEV-0t-QpX"/>
                             <constraint firstItem="TYT-Sn-aGw" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Wy9-qS-ZSQ"/>
+                            <constraint firstItem="hxF-6Q-HB1" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="dDj-Cw-Gpj"/>
                             <constraint firstItem="Fvs-Z6-NSx" firstAttribute="top" secondItem="5E7-t7-F5d" secondAttribute="bottom" constant="20" id="dOU-FJ-9wW"/>
                             <constraint firstItem="Fvs-Z6-NSx" firstAttribute="centerX" secondItem="5E7-t7-F5d" secondAttribute="centerX" id="dnd-fx-kEP"/>
+                            <constraint firstItem="6mC-Ep-IxB" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gOX-qU-ZB8"/>
                             <constraint firstAttribute="trailing" secondItem="TYT-Sn-aGw" secondAttribute="trailing" id="hlg-hV-1LF"/>
+                            <constraint firstItem="6mC-Ep-IxB" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="38" id="kWF-rz-kNi"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="TYT-Sn-aGw" secondAttribute="bottom" id="pMn-nA-5gO"/>
                             <constraint firstItem="Fvs-Z6-NSx" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="q5B-ZX-uOp"/>
                             <constraint firstItem="TYT-Sn-aGw" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="tFl-Y9-vJt"/>
+                            <constraint firstItem="hxF-6Q-HB1" firstAttribute="top" secondItem="6mC-Ep-IxB" secondAttribute="bottom" constant="28" id="tR8-tx-waU"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -67,6 +89,7 @@
     </scenes>
     <resources>
         <image name="Tapper" width="497" height="107"/>
+        <image name="coin" width="244" height="268"/>
         <image name="playbtn" width="356" height="175"/>
         <image name="retrobg" width="800" height="800"/>
     </resources>
